# tree_maximum_matching

./: CMakeLists.txt  LICENSE  README.md
scripts/: build.sh  clean.sh  conda.sh  runHungarianAlgorithmTest.sh  runTreeMatchingTest.sh  runTreeMatchingTimeTest.sh  runTreePreservingEmbeddingTest.sh
src/: HungarianAlgorithm.cpp  HungarianAlgorithm.hpp  TreeLoader.cpp  TreeLoader.hpp  TreeMatching.cpp  TreeMatching.hpp  TreeMatchingVisualizer.cpp  TreeMatchingVisualizer.hpp  TreeNode.hpp  TreePreservingEmbedding.cpp  TreePreservingEmbedding.hpp  TreePreservingEmbeddingVisualizer.cpp  TreePreservingEmbeddingVisualizer.hpp
tests/: TestHungarianAlgorithm.cpp  TestTreeMatching.cpp  TestTreeMatchingTime.cpp  TestTreePreservingEmbedding.cpp  TreeMatchingTestHelper.cpp  TreeMatchingTestHelper.hpp
